--- a/about-me/index.html
+++ b/about-me/index.html
@@ -15,27 +15,24 @@ layout: page
 
 <div style="font-family: 'Lora', serif; font-size:1rem;">
 
-  <h1 id="title">Resume</h1>
+  <h1 id="title">About me</h1>
 
   <h3> Education </h3>
   <details>
     <summary>
       <span class="bold">&#9658; Bachelor of Science</span>,
-      University of Waterloo,
-      <i>Sep 2017 - Apr 2022</i>
+      University of Toronto,
+      <i>Sep 2022 - Apr 2026</i>
     </summary>
     <ul class=no-top-bot-margin>
-      <li> Computer Science Major </li>
-      <li> Joint Combinatorics & Optimization </li>
-      <li> Joint Statistics</li>
-      <li> Computational Mathematics Minor</li>
-      <li> 90.10% Faculty Average</li>
+      <li> Computer Science Specialist with a Major in Statisctics and Mathematics</li>
+      <li> GPA: 3.84</li>
     </ul>
   </details>
 
   <hr/>
 
-  <h3> Work Experience </h3>
+  <h3> Violin</h3>
 
 <!--  <details>-->
 <!--    <summary>-->
@@ -50,62 +47,42 @@ layout: page
 
   <details>
     <summary>
-      <span class="bold">&#9658; Software Engineer Intern</span> @
-      Verkada,
-      <i>May 2022 - Aug 2022</i>
+      <span class="bold">&#9658; Toronto Youth Symphony Orchestra</span>
+      <i>Sept 2022 - Apr 2023</i>
     </summary>
     <ul class=no-top-bot-margin>
-      <li>Team: Computer Vision & Search </li>
+      <li>Held the positon of associate concertmaster as well as second violin principal throughtout the season</li>
+      <li>Performed side by side concerts alongside the TSO under the baton of Gustavo Gustavo Gimeno </li>
     </ul>
   </details>
 
   <details>
     <summary>
-      <span class="bold">&#9658; Software Engineer Intern</span> @
-      Splunk,
-      <i>Jan 2022 - April 2022</i>
+      <span class="bold">&#9658; National Youth Orchestra of Canada: Borealis Tour</span> 
+      <i>June 2022 - Aug 2022</i>
     </summary>
     <ul class=no-top-bot-margin>
-      <li>Team: Data Stream Processing </li>
+      <li>Selected as 1 of 26 violins</li>
+      <li>Toured around Ontario and Quebec in cities including Montreal, Kingston, Toronto, and more</li>
     </ul>
   </details>
 
   <details>
     <summary>
-      <span class="bold">&#9658; Software Engineer Intern</span> @
-      Amazon Web Services,
-      <i>May 2021 - July 2021</i>
+      <span class="bold">&#9658; Phil and Eli Taylor Performance Academy for Young artists</span> @
+      <i>Sept 2017 - May 2022</i>
     </summary>
     <ul class=no-top-bot-margin>
-      <li>Team: Large Scale Data Transfer </li>
+      <li>Served as the associate concertmaster of the academy chamber orchestra before COVID-19</li>
+      <li>Performed </li>
     </ul>
   </details>
 
-  <details>
-    <summary>
-      <span class="bold">&#9658; Software Engineer Intern</span> @
-      Bank of America Merrill Lynch,
-      <i>May 2019 - Aug 2019</i>
-    </summary>
-    <ul class=no-top-bot-margin>
-      <li>Team: Equity-Linked Technology </li>
-    </ul>
-  </details>
-
-  <details>
-    <summary>
-      <span class="bold">&#9658; Software Engineer Intern</span> @
-      PointClickCare,
-      <i>Sept 2018 - Dec 2018</i>
-    </summary>
-    <ul class=no-top-bot-margin>
-      <li>Team: Enterprise Reporting </li>
-    </ul>
-  </details>
+  
 
   <hr/>
 
-  <h3> Research & Publication </h3>
+  <!-- <h3> Research & Publication </h3>
 
     <details>
       <summary>
@@ -150,7 +127,7 @@ layout: page
         </ul>
     </details>
 
-    <hr>
+    <hr> -->
 
 <!--    <h2>Miscellaneous</h2>-->
 
