--- a/course-notes/index.html
+++ b/course-notes/index.html
@@ -46,10 +46,23 @@ layout: page
           <li><a href="../assets/course-notes/MAT157.pdf" target="_blank">Course Notes</a></li>
         </ul>
       </details>
+
+      <details class=indent>
+        <summary><span class="bold">&#9658; MAT237 - Multivariable Calculus</span></summary>
+        <ul class="no-top-bot-margin">
+          <li><a href="../assets/course-notes/MAT237.pdf" target="_blank">Course Notes</a></li>
+        </ul>
+      </details>
+
+      <details class=indent>
+        <summary><span class="bold later">&#9658; STA257 - Probability and Statistics I (Advanced Level)</span></summary>
+        
+
+      </details>
   </div>
 <!--  </details>-->
 
   <hr>
-  <em> Last update: Nov 2022. </em>
+  <em> Last update: Aug 2023. </em>
 
 </div>
