added more notes

--- a/course-notes/index.html
+++ b/course-notes/index.html
@@ -29,9 +29,12 @@ layout: page
   <h2>University of Toronto</h2>
   <h3>Current Courses</h3>
   <div style="font-size: 1rem;">
-      <details class=indent>
-        <summary><span class="bold later">&#9658; CSC110 - Intro to CS</span></summary>
-      </details>
+    <details class=indent>
+      <summary><span class="bold">&#9658; MAT157 - Analysis I (Advanced Level)</span></summary>
+      <ul class="no-top-bot-margin">
+        <li><a href="../assets/course-notes/MAT157.pdf" target="_blank">Course Notes</a></li>
+      </ul>
+    </details>
 
       <details class=indent>
         <summary><span class="bold">&#9658; MAT240 - Algebra I (Advanced Level)</span></summary>
@@ -41,9 +44,9 @@ layout: page
       </details>
 
       <details class=indent>
-        <summary><span class="bold">&#9658; MAT157 - Analysis I (Advanced Level)</span></summary>
+        <summary><span class="bold">&#9658; MAT247 - Algebra II (Advanced Level)</span></summary>
         <ul class="no-top-bot-margin">
-          <li><a href="../assets/course-notes/MAT157.pdf" target="_blank">Course Notes</a></li>
+          <li><a href="../assets/course-notes/MAT247.pdf" target="_blank">Course Notes</a></li>
         </ul>
       </details>
 
@@ -55,10 +58,27 @@ layout: page
       </details>
 
       <details class=indent>
-        <summary><span class="bold later">&#9658; STA257 - Probability and Statistics I (Advanced Level)</span></summary>
-        
+        <summary><span class="bold">&#9658; STA257 - Probability and Statistics I (Advanced Level)</span></summary>
+        <ul class="no-top-bot-margin">
+          <li><a href="../assets/course-notes/Sta257.pdf" target="_blank">Course Notes</a></li>
+        </ul>
 
       </details>
+      <details class=indent>
+        <summary><span class="bold later">&#9658; STA261 - Probability and Statistics II (Advanced Level)</span></summary>
+      </details>
+
+      </details>
+      <details class=indent>
+        <summary><span class="bold later">&#9658; MAT257 - Analysis II (Advanced Level)</span></summary>
+
+      </details>
+
+    </details>
+    <details class=indent>
+      <summary><span class="bold later">&#9658; CSC265 - Enriched Data Structures and Analysis (Advanced Level)</span></summary>
+
+    </details>
   </div>
 <!--  </details>-->
 
